# InstantID-fork

./: pipeline_stable_diffusion_xl_instantid_full.py  pyproject.toml
