[project]
name = "instantid"
version = "0.1.0"
description = "InstantID fork"
authors = [{ name = "Washakh", email = "washakh.ali@runware.ai" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ip_adapter"]
py-modules = ["pipeline_stable_diffusion_xl_instantid_full"]